feat: made the ui changes and integrated the profile page and changed the app icon
